[project]
name = "morningstreams"
version = "0.2.3"
description = "Expose acestreams from morningstreams on your local network"
authors = [{ name = "S1M0N38", email = "bertolottosimone@gmail.com" }]
license = "MIT"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = ["click>=8.1.3"]

[project.scripts]
morningstreams = "morningstreams.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 80
target-version = ['py39', 'py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
skip = ["acestream.engine"]
