[project]
name = "morningstreams"
dynamic = ["version"]
description = "Expose acestreams from morningstreams on your local network"
authors = [{ name = "S1M0N38", email = "bertolottosimone@gmail.com" }]
license = "MIT"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = ["click>=8.1.3"]

[project.scripts]
morningstreams = "morningstreams.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "morningstreams/__init__.py"

[dependency-groups]
dev = [
  "ruff>=0.14.13",
  "ty>=0.0.12",
]

[tool.ruff]
lint.extend-select = ["I"]
lint.task-tags = ["FIX", "HACK", "NOTE", "PERF", "TEST", "TODO", "WARN"]
